Fixed overflow issues

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,11 +48,12 @@ body {
     height: 100vh !important;
     width: 100vw !important;
     padding: 0 !important;
+    margin: 0;
 }
 
 main {
     overflow: hidden;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     z-index: 10;
     background-color: var(--primaryColor);
@@ -61,6 +62,7 @@ main {
 }
 
 #floatingNav {
+    overflow: hidden !important;
     cursor: pointer;
     z-index: 100;
     top: 0;
@@ -115,6 +117,7 @@ main {
 }
 
 #floatingNavContent {
+    overflow: hidden;
     z-index: 20;
     position: absolute;
     top: 0;
@@ -480,6 +483,7 @@ main {
     }
     #floatingNavContent {
         width: 100vw;
+        align-items: center;
         li,
         a {
             font-size: 3rem;
